[gd_scene load_steps=8 format=2]

[ext_resource path="res://interactables/buildb/buildbench.gd" type="Script" id=1]
[ext_resource path="res://gui/inventory_gui.tscn" type="PackedScene" id=6]
[ext_resource path="res://gui/themes/action_button_theme.tres" type="Theme" id=7]

[sub_resource type="BoxShape" id=13]

[sub_resource type="CubeMesh" id=8]

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.643137, 0.643137, 0.643137, 1 )

[sub_resource type="CubeMesh" id=10]

[node name="build_bench" type="StaticBody"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, -3.55271e-15, 0, 1, 0, 0, 0 )
shape = SubResource( 13 )

[node name="visuals" type="Spatial" parent="."]
transform = Transform( 1, 0, -3.55271e-15, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="visuals"]
transform = Transform( 1.40211, 0, 0, 0, 0.0718723, 0, 0, 0, 0.657221, 0, -0.414657, 0 )
mesh = SubResource( 8 )
skeleton = NodePath("../..")
material/0 = SubResource( 9 )

[node name="MeshInstance2" type="MeshInstance" parent="visuals"]
transform = Transform( 0.105727, 0, 0, 0, 0.448526, 0, 0, 0, 0.600278, -1.28478, -0.904023, 0 )
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 9 )

[node name="MeshInstance3" type="MeshInstance" parent="visuals"]
transform = Transform( 0.105727, 0, 0, 0, 0.448526, 0, 0, 0, 0.600278, 1.26417, -0.904023, 0 )
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 9 )

[node name="build_projects" type="Spatial" parent="."]

[node name="buildBase" type="Position3D" parent="build_projects"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, -3.55271e-15, 0, 1, 0, -0.348499, 0 )

[node name="bb_gui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 2

[node name="inventory_gui" parent="bb_gui" instance=ExtResource( 6 )]

[node name="All" parent="bb_gui/inventory_gui/VBoxContainer/TabContainer" index="0"]
margin_top = 24.0

[node name="Components" parent="bb_gui/inventory_gui/VBoxContainer/TabContainer" index="1"]
margin_top = 24.0

[node name="Tools" parent="bb_gui/inventory_gui/VBoxContainer/TabContainer" index="2"]
margin_top = 24.0

[node name="RenameDialog" type="ConfirmationDialog" parent="bb_gui"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.5
margin_top = -34.0
margin_right = 89.5
margin_bottom = 34.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "New project name"

[node name="LineEdit" type="LineEdit" parent="bb_gui/RenameDialog"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
align = 1
placeholder_text = "New Build Project"

[node name="new_project" type="Button" parent="bb_gui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -21.0
margin_right = 100.0
rect_min_size = Vector2( 200, 20 )
size_flags_horizontal = 6
theme = ExtResource( 7 )
text = "start new build project"

[connection signal="item_selected" from="bb_gui/inventory_gui" to="." method="_on_inventory_gui_item_selected"]
[connection signal="pressed" from="bb_gui/new_project" to="." method="_on_new_project_pressed"]

[editable path="bb_gui/inventory_gui"]
